--- a/compass/dev/_variables.scss
+++ b/compass/dev/_variables.scss
@@ -8,3 +8,5 @@ $sectionMinHeight : 430px;
 $playfairFontFamily: 'Playfair Display', 'Times New Roman', serif;
 $circularFontFamily: 'Circular Std', Helvetica, sans-serif;
 $circularBookFontFamily: 'Circular Std Book', Helvetica, sans-serif;
+
+$tabletPortrait : 768px;
