--- a/compass/dev/_postcard_static.scss
+++ b/compass/dev/_postcard_static.scss
@@ -5,38 +5,93 @@
 	font-weight: bold;
 	font-style: normal;
 }
+
 body{
 	margin:0;
 	@for $i from 1 through length($types) {
 		$type: nth($types, $i);
 		$colour: nth($colours, $i);
 		$fontColour: nth($fontColours, $i);
+		$bgImage: nth($bgImages, $i);
 
 		&.bg-#{$type} {
 			background: $colour;
 			color: $fontColour;
 		}
 
+		.ic-#{$type} {
+			background-image: url('../images/' + $bgImage + '_sel.svg');
+		}
+
 	}
 }
 
-#greetings-title{
+@include button(1em, 0);
+
+main{
+	color:#fff;
 	position: absolute;
-	left:0;top:0;
-	display: table;
 	width: 100%;
 	height: 100%;
-	font-family: $playfairFontFamily;
-	font-size:(50/16)+em;
-	color:#fff;
-	text-align: center;
-	font-weight: 700;
-	div {
-		display: table-cell;
+	.wrapper{
+		max-width: 1024px;
+		margin: 0 auto;
+		display: table;
+		position: relative;
 		width: 100%;
 		height: 100%;
-		vertical-align: middle;
-		padding:0 30px;
+		> div{
+			display: table-cell;
+			vertical-align: middle;
+			width: 100%;
+			height: 100%;
+			text-align: center;
+			@media all and (max-height: 650px) {
+				vertical-align: top;
+			}
+		}
+	}
+}
+
+#first-step{
+	@include transition(opacity 0.8s ease-out);
+	padding:0 20px;
+	opacity: 1;
+	position: relative;
+	z-index: 2;
+
+	&.hide{
+		opacity: 0;
+		.btn{
+			cursor: default;
+		}
 	}
 
+	.type{
+		max-width: 250px;
+		background-size:100% auto;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-color: transparent;
+		margin:-250px auto 0;
+		@media all and (max-height: 650px) {
+			margin:0 auto;
+		}
+
+		&:after{
+			content:'.';
+			display: block;
+			height: 1px;
+			font-size:0;
+			padding-top:100%;
+			text-indent: -9999px;
+			visibility: hidden;
+		}
+	}
+	p {
+		font-family: $playfairFontFamily;
+		font-weight: bold;
+		font-size:2.25em;
+		margin: 0 auto 30px 0;
+	}
 }
