--- a/public/css/postcard_static.css
+++ b/public/css/postcard_static.css
@@ -12,60 +12,162 @@ body.bg-client {
   background: #b8d4ec;
   color: #7e94a5;
 }
+body .ic-client {
+  background-image: url("../images/02_client_sel.svg");
+}
 body.bg-agence {
   background: #b9dabb;
-  color: #9ebaa0;
+  color: #889e8a;
+}
+body .ic-agence {
+  background-image: url("../images/01_agence_sel.svg");
 }
 body.bg-prospect {
   background: #d52685;
-  color: #b42372;
+  color: #a01e65;
+}
+body .ic-prospect {
+  background-image: url("../images/09_prospect_sel.svg");
 }
 body.bg-boss {
   background: #b2dbd7;
-  color: #98bbb8;
+  color: #86a19f;
+}
+body .ic-boss {
+  background-image: url("../images/05_boss_sel.svg");
 }
 body.bg-comptable-banquier {
   background: #f4b7d1;
-  color: #e3a7bf;
+  color: #c992a8;
+}
+body .ic-comptable-banquier {
+  background-image: url("../images/03_banquier_sel.svg");
 }
 body.bg-famille {
   background: #d9d7d8;
   color: #b9b9b9;
 }
+body .ic-famille {
+  background-image: url("../images/10_famille_sel.svg");
+}
 body.bg-enfants {
   background: #f8d500;
   color: #eab61a;
 }
+body .ic-enfants {
+  background-image: url("../images/07_enfants_sel.svg");
+}
 body.bg-belle-famille {
   background: #4f4291;
-  color: #45387d;
+  color: #372d62;
+}
+body .ic-belle-famille {
+  background-image: url("../images/06_belle-famille_sel.svg");
 }
 body.bg-cible-amoureuse {
   background: #ea332f;
-  color: #c32f27;
+  color: #ad2c25;
+}
+body .ic-cible-amoureuse {
+  background-image: url("../images/08_cible amoureuse_sel.svg");
 }
 body.bg-ex {
   background: #164164;
-  color: #10342b;
+  color: #0e273b;
+}
+body .ic-ex {
+  background-image: url("../images/04_ex_sel.svg");
 }
 
-#greetings-title {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: table;
-  width: 100%;
-  height: 100%;
-  font-family: "Playfair Display", "Times New Roman", serif;
-  font-size: 3.125em;
+.btn {
+  display: inline-block;
   color: #fff;
-  text-align: center;
-  font-weight: 700;
+  font-size: 1em;
+  font-family: "Playfair Display", "Times New Roman", serif;
+  white-space: nowrap;
+  padding: 4px 17px;
+  border: 2px solid #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-left: 0;
+  font-weight: bold;
+  line-height: 1.3;
 }
-#greetings-title div {
-  display: table-cell;
+.btn:hover {
+  background: rgba(255, 255, 255, 0.25);
+}
+.btn:first-child {
+  margin-left: 0;
+}
+
+main {
+  color: #fff;
+  position: absolute;
   width: 100%;
   height: 100%;
+}
+main .wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+  display: table;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+main .wrapper > div {
+  display: table-cell;
   vertical-align: middle;
-  padding: 0 30px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+@media all and (max-height: 650px) {
+  main .wrapper > div {
+    vertical-align: top;
+  }
+}
+
+#first-step {
+  -moz-transition: opacity 0.8s ease-out;
+  -o-transition: opacity 0.8s ease-out;
+  -webkit-transition: opacity 0.8s ease-out;
+  transition: opacity 0.8s ease-out;
+  padding: 0 20px;
+  opacity: 1;
+  position: relative;
+  z-index: 2;
+}
+#first-step.hide {
+  opacity: 0;
+}
+#first-step.hide .btn {
+  cursor: default;
+}
+#first-step .type {
+  max-width: 250px;
+  background-size: 100% auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  margin: -250px auto 0;
+}
+@media all and (max-height: 650px) {
+  #first-step .type {
+    margin: 0 auto;
+  }
+}
+#first-step .type:after {
+  content: '.';
+  display: block;
+  height: 1px;
+  font-size: 0;
+  padding-top: 100%;
+  text-indent: -9999px;
+  visibility: hidden;
+}
+#first-step p {
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-weight: bold;
+  font-size: 2.25em;
+  margin: 0 auto 30px 0;
 }
