--- a/compass/dev/_postcard.scss
+++ b/compass/dev/_postcard.scss
@@ -9,6 +9,9 @@ body{
 		&.bg-#{$type} {
 			background: $colour;
 			color: $fontColour;
+			#footer{
+				color:$fontColour;
+			}
 		}
 
 		.ic-#{$type} {
@@ -38,6 +41,9 @@ main{
 			width: 100%;
 			height: 100%;
 			text-align: center;
+			@media all and (max-height: 650px) {
+				vertical-align: top;
+			}
 		}
 	}
 }
@@ -63,8 +69,7 @@ main{
 		background-repeat: no-repeat;
 		background-color: transparent;
 		margin:-250px auto 0;
-
-		@media all and (max-height: 500px) {
+		@media all and (max-height: 650px) {
 			margin:0 auto;
 		}
 
@@ -100,7 +105,7 @@ main{
 		width: 100%;
 		height: 100%;
 		vertical-align: middle;
-		padding:170px 20px 50px;
+		padding:170px 20px 80px;
 	}
 
 	.title{
@@ -167,4 +172,54 @@ main{
 			}
 		}
 	}
+}
+
+#footer{
+
+	position: absolute;
+	bottom: 20px;
+	width: 100%;
+	left: 50%;
+	max-width: 500px;
+	padding:0 30px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	opacity: 0;
+
+	@include transition(opacity 0.7s ease-out);
+	@include transform(translate(-50%,0));
+
+	&.show{
+		opacity: 1;
+	}
+
+	> a{
+		float: left;
+		font-size:0.75em;
+		line-height: 1.825em;
+		font-family: $circularFontFamily;
+
+		&:hover{
+			border-bottom: 2px solid;
+			margin-bottom: -2px;
+		}
+	}
+
+	.footer-lks{
+		float:right;
+		font-size:1.25em;
+		a {
+			padding:2px 3px;
+			margin:0 2px
+		}
+
+	}
+
+	a {
+		display: inline-block;
+		color:inherit;
+		text-decoration: none;
+	}
+
 }
