--- a/compass/dev/_postcard_static.scss
+++ b/compass/dev/_postcard_static.scss
@@ -89,7 +89,7 @@ main{
 		}
 	}
 	p {
-		font-family: $playfairFontFamily;
+		font-family: $titleFontFamily;
 		font-weight: bold;
 		font-size:3em;
 		margin: 0 auto 30px 0;
