--- a/public/css/postcard.css
+++ b/public/css/postcard.css
@@ -12,25 +12,62 @@
   font-weight: normal;
   font-style: normal;
 }
+/*
 @font-face {
-  font-family: 'Circular Std Book';
-  src: url("../fonts/CircularStd-Book.eot");
-  src: url("../fonts/CircularStd-Book.eot?#iefix") format("embedded-opentype"), url("../fonts/CircularStd-Book.woff") format("woff"), url("../fonts/CircularStd-Book.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'Circular Std Book';
+	src: url('../fonts/CircularStd-Book.eot');
+	src: url('../fonts/CircularStd-Book.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/CircularStd-Book.woff') format('woff'),
+	url('../fonts/CircularStd-Book.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
+
 @font-face {
-  font-family: 'Circular Std';
-  src: url("../fonts/CircularStd-Black.eot");
-  src: url("../fonts/CircularStd-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/CircularStd-Black.woff") format("woff"), url("../fonts/CircularStd-Black.ttf") format("truetype");
-  font-weight: 900;
-  font-style: normal;
+	font-family: 'Circular Std';
+	src: url('../fonts/CircularStd-Black.eot');
+	src: url('../fonts/CircularStd-Black.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/CircularStd-Black.woff') format('woff'),
+	url('../fonts/CircularStd-Black.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
 }
+
 @font-face {
-  font-family: 'Circular Std';
-  src: url("../fonts/CircularStd-Bold.eot");
-  src: url("../fonts/CircularStd-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/CircularStd-Bold.woff") format("woff"), url("../fonts/CircularStd-Bold.ttf") format("truetype");
+	font-family: 'Circular Std';
+	src: url('../fonts/CircularStd-Bold.eot');
+	src: url('../fonts/CircularStd-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/CircularStd-Bold.woff') format('woff'),
+	url('../fonts/CircularStd-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}*/
+@font-face {
+  font-family: 'HK Grotesk';
+  src: url("../fonts/hkgrotesk-bold-webfont.eot");
+  src: url("../fonts/hkgrotesk-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/hkgrotesk-bold-webfont.woff2") format("woff2"), url("../fonts/hkgrotesk-bold-webfont.woff") format("woff"), url("../fonts/hkgrotesk-bold-webfont.ttf") format("truetype"), url("../fonts/hkgrotesk-bold-webfont.svg#hk_groteskbold") format("svg");
   font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'HK Grotesk';
+  src: url("../fonts/hkgrotesk-medium-webfont.eot");
+  src: url("../fonts/hkgrotesk-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2"), url("../fonts/hkgrotesk-medium-webfont.woff") format("woff"), url("../fonts/hkgrotesk-medium-webfont.ttf") format("truetype"), url("../fonts/hkgrotesk-medium-webfont.svg#hk_groteskmedium") format("svg");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'HK Grotesk';
+  src: url("../fonts/hkgrotesk-light-webfont.eot");
+  src: url("../fonts/hkgrotesk-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2"), url("../fonts/hkgrotesk-light-webfont.woff") format("woff"), url("../fonts/hkgrotesk-light-webfont.ttf") format("truetype"), url("../fonts/hkgrotesk-light-webfont.svg#hk_grotesklight") format("svg");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'HK Grotesk';
+  src: url("../fonts/hkgrotesk-regular-webfont.eot");
+  src: url("../fonts/hkgrotesk-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2"), url("../fonts/hkgrotesk-regular-webfont.woff") format("woff"), url("../fonts/hkgrotesk-regular-webfont.ttf") format("truetype"), url("../fonts/hkgrotesk-regular-webfont.svg#hk_groteskregular") format("svg");
+  font-weight: normal;
   font-style: normal;
 }
 @font-face {
@@ -536,17 +573,11 @@ body.bg-client {
   background: #b8d4ec;
   color: #7e94a5;
 }
-body.bg-client #footer {
-  color: #7e94a5;
-}
 body .ic-client {
   background-image: url("../images/02_client_sel.svg");
 }
 body.bg-agence {
   background: #b9dabb;
-  color: #889e8a;
-}
-body.bg-agence #footer {
   color: #889e8a;
 }
 body .ic-agence {
@@ -556,17 +587,11 @@ body.bg-prospect {
   background: #d52685;
   color: #a01e65;
 }
-body.bg-prospect #footer {
-  color: #a01e65;
-}
 body .ic-prospect {
   background-image: url("../images/09_prospect_sel.svg");
 }
 body.bg-boss {
   background: #b2dbd7;
-  color: #86a19f;
-}
-body.bg-boss #footer {
   color: #86a19f;
 }
 body .ic-boss {
@@ -576,17 +601,11 @@ body.bg-comptable-banquier {
   background: #f4b7d1;
   color: #c992a8;
 }
-body.bg-comptable-banquier #footer {
-  color: #c992a8;
-}
 body .ic-comptable-banquier {
   background-image: url("../images/03_banquier_sel.svg");
 }
 body.bg-famille {
   background: #d9d7d8;
-  color: #b9b9b9;
-}
-body.bg-famille #footer {
   color: #b9b9b9;
 }
 body .ic-famille {
@@ -596,17 +615,11 @@ body.bg-enfants {
   background: #f8d500;
   color: #eab61a;
 }
-body.bg-enfants #footer {
-  color: #eab61a;
-}
 body .ic-enfants {
   background-image: url("../images/07_enfants_sel.svg");
 }
 body.bg-belle-famille {
   background: #4f4291;
-  color: #372d62;
-}
-body.bg-belle-famille #footer {
   color: #372d62;
 }
 body .ic-belle-famille {
@@ -616,17 +629,11 @@ body.bg-cible-amoureuse {
   background: #ea332f;
   color: #ad2c25;
 }
-body.bg-cible-amoureuse #footer {
-  color: #ad2c25;
-}
 body .ic-cible-amoureuse {
   background-image: url("../images/08_cible amoureuse_sel.svg");
 }
 body.bg-ex {
   background: #164164;
-  color: #0e273b;
-}
-body.bg-ex #footer {
   color: #0e273b;
 }
 body .ic-ex {
@@ -739,7 +746,7 @@ main .wrapper > div {
   width: 100%;
   height: 100%;
   vertical-align: middle;
-  padding: 170px 20px 80px;
+  padding: 190px 20px 80px;
 }
 #second-step .title {
   font-family: "Playfair Display", "Times New Roman", serif;
@@ -747,18 +754,17 @@ main .wrapper > div {
   color: #fff;
   text-align: center;
   font-weight: 700;
-  position: absolute;
-  left: 0;
-  top: 50%;
+  /*position: absolute;
+  left:0;
+  top:50%;
   width: 100%;
-  -moz-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  -moz-transition: -moz-transform 0.8s ease-out, top 0.8s ease-out;
-  -o-transition: -o-transform 0.8s ease-out, top 0.8s ease-out;
-  -webkit-transition: -webkit-transform 0.8s ease-out, top 0.8s ease-out;
-  transition: transform 0.8s ease-out, top 0.8s ease-out;
+  @include transform(translate(0,-50%));*/
+  -moz-transition: padding-bottom 0.8s ease-out, margin-top 0.8s ease-out;
+  -o-transition: padding-bottom 0.8s ease-out, margin-top 0.8s ease-out;
+  -webkit-transition: padding-bottom 0.8s ease-out, margin-top 0.8s ease-out;
+  transition: padding-bottom 0.8s ease-out, margin-top 0.8s ease-out;
+  padding-bottom: 0;
+  margin-top: 0;
 }
 @media all and (max-width: 380px) {
   #second-step .title {
@@ -766,29 +772,36 @@ main .wrapper > div {
   }
 }
 #second-step .title.go-up {
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  -webkit-transform: translate(0, 0);
-  transform: translate(0, 0);
-  top: 60px;
+  /*@include transform(translate(0,0));*/
+  padding-bottom: 120px;
+  margin-top: -187px;
+}
+@media all and (max-width: 380px) {
+  #second-step .title.go-up {
+    padding-bottom: 120px;
+    margin-top: -173px;
+  }
 }
 #second-step .title.go-up .typed-cursor {
   opacity: 0;
   visibility: hidden;
 }
 #second-step .message {
-  font-family: "Circular Std", Helvetica, sans-serif;
+  font-family: "HK Grotesk", Helvetica, sans-serif;
   font-size: 2.25em;
   font-weight: bold;
+  min-height: 46px;
 }
 @media all and (max-width: 550px) {
   #second-step .message {
     font-size: 1.875em;
+    min-height: 38px;
   }
 }
 @media all and (max-width: 380px) {
   #second-step .message {
     font-size: 1.5em;
+    min-height: 30px;
   }
 }
 #second-step .website {
@@ -829,24 +842,17 @@ main .wrapper > div {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  opacity: 0;
-  -moz-transition: opacity 0.7s ease-out;
-  -o-transition: opacity 0.7s ease-out;
-  -webkit-transition: opacity 0.7s ease-out;
-  transition: opacity 0.7s ease-out;
+  color: #fff;
   -moz-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
   -webkit-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
 }
-#footer.show {
-  opacity: 1;
-}
 #footer > a {
   float: left;
   font-size: 0.75em;
   line-height: 1.825em;
-  font-family: "Circular Std", Helvetica, sans-serif;
+  font-family: "HK Grotesk", Helvetica, sans-serif;
 }
 #footer > a:hover {
   border-bottom: 2px solid;
