--- a/compass/dev/_button.scss
+++ b/compass/dev/_button.scss
@@ -3,7 +3,7 @@
 		display: inline-block;
 		color: #fff;
 		font-size: $fontSize;
-		font-family: $playfairFontFamily;
+		font-family: $titleFontFamily;
 		white-space: nowrap;
 		padding: 4px 17px;
 		border: 2px solid #fff;
