--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -111,6 +111,7 @@ p{
 
 #menu-type {
 	width: 100%;
+	padding-top:3.3333%;
 	padding-right:3.3333%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
